fixup some tfc stuff, backport the model changes