@@ -5,26 +5,20 @@ import java.util.Collection;
 import java.util.List;
 import java.util.Map;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 
 import com.google.gson.JsonObject;
 import net.minecraft.client.Minecraft;
-import net.minecraft.client.multiplayer.ClientLevel;
 import net.minecraft.client.particle.TextureSheetParticle;
 import net.minecraft.client.renderer.block.model.*;
 import net.minecraft.client.renderer.texture.TextureAtlas;
 import net.minecraft.client.renderer.texture.TextureAtlasSprite;
-import net.minecraft.client.resources.model.BlockModelRotation;
-import net.minecraft.client.resources.model.Material;
-import net.minecraft.client.resources.model.SimpleBakedModel;
-import net.minecraft.core.BlockPos;
+import net.minecraft.client.resources.model.*;
 import net.minecraft.core.Direction;
 import net.minecraft.resources.ResourceLocation;
 import net.minecraft.util.GsonHelper;
-import net.minecraft.world.level.FoliageColor;
-import net.minecraft.world.level.block.state.BlockState;
 
 import com.eerussianguy.betterfoliage.particle.SpritePicker;
+import com.mojang.blaze3d.vertex.PoseStack;
 
 import static com.eerussianguy.betterfoliage.BetterFoliage.MOD_ID;
 
@@ -38,8 +32,8 @@ public class Helpers
     }
 
     public static final ResourceLocation EMPTY = identifier("empty");
-
     public static final BlockFaceUV UV_DEFAULT = new BlockFaceUV(new float[] {0f, 0f, 16f, 16f}, 0);;
+    public static final ModelResourceLocation BACKING_DIRT_MODEL = new ModelResourceLocation("minecraft", "dirt", "inventory");
 
     public static BlockElementFace makeTintedFace(BlockFaceUV uv)
     {
@@ -65,7 +59,7 @@ public class Helpers
     public static Collection<Material> makeMaterials(ResourceLocation... textures)
     {
         //noinspection deprecation
-        return Arrays.stream(textures).map(texture -> new Material(TextureAtlas.LOCATION_BLOCKS, texture)).collect(Collectors.toList());
+        return Arrays.stream(textures).map(texture -> new Material(TextureAtlas.LOCATION_BLOCKS, texture)).toList();
     }
 
     public static BakedQuad makeBakedQuad(BlockElement BlockElement, BlockElementFace partFace, TextureAtlasSprite atlasSprite, Direction dir, BlockModelRotation modelRotation, ResourceLocation modelResLoc)
@@ -137,5 +131,10 @@ public class Helpers
         particle.pickSprite(picker);
         particle.setColor(r, g, b);
         mc.particleEngine.add(particle);
+    }
+
+    public static void handlePerspective(ItemTransforms.TransformType cameraTransformType, PoseStack poseStack)
+    {
+        Minecraft.getInstance().getModelManager().getModel(BACKING_DIRT_MODEL).handlePerspective(cameraTransformType, poseStack);
     }
 }
